k8s/apps/mongo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: apps
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
